# MiniVerse

./: .gitignore  CONTRIBUTING.md  README.md
DetectEmail/: Detect_Email_Ham_vs_Spam.ipynb  README.md
FileEncrypter/: Decrypter.cs  EncryptedData.cs  Encrypter.cs  FileEncrypter.csproj  InputHelpers.cs  PasswordGetter.cs  Program.cs
QuakeAnalyst/: QuakeAnalyst.sln
QuakeAnalyst/QuakeAnalyst/: NLog.config  Program.cs  QuakeAnalyst.csproj
TakeABreak/: .eslintrc.cjs  README.md  dev-app-update.yml  package-lock.json  package.json
busras-agile-tips/: Readme.md  busras-agile-tips.sln
busras-agile-tips/AgileTips.Api/: AgileTips.Api.csproj  Program.cs  appsettings.json
champ-mngr/: Cargo.toml  Readme.md
champ-mngr/src/: main.rs  menu.rs  model.rs  test.rs  ui.rs
coderverse-api/: .env  Cargo.toml  Readme.md
coderverse-api/src/: database.rs  main.rs  requets.http
coderverse-api/src/members/: handlers.rs  mod.rs  models.rs  routes.rs  services.rs  tests.rs
coderverse-api/src/migrations/: 001_create_members_table.sql  002_add_photo_url_member.sql
compress-ebook-for-kindle/: README.md  compress-ebook-for-kindle.ipynb
glip/: Cargo.toml  Readme.md
glip/src/: main.rs  manager.rs
image-processing/: Cargo.toml  Readme.md
image-processing/src/: image.rs  main.rs
imbd-sentiment-analysis/: imbdSentimentAnalysis.m  positive-negative-neutral-figure.fig
notes-server/: Cargo.toml  Dockerfile  Readme.md  notes.json
short-break/: electron-builder.yml  package-lock.json  package.json
wIB2/: readme.md  requirements.txt
wimb/: .env  Cargo.toml  Readme.md
(+77 files in other folders)
